--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
             <h1>Something</h1>
         </div>
         <div id="secline">
-            <div id="hang"><img src="img/s0.jpg" alt=""></div>
+            <div id="hang"><img src="img/s0.jpg" alt="" id="picture"></div>
             <div id="letters"></div>
         </div>
     </div>
 
+
+    <script src="./onstart.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
